[tool.poetry]
name = "logcosh"
version = "0.1.0"
description = ""
authors = ["Ivan Valles Perez <ivanvallesperez@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.3"
torch = "^1.7.1"
torchvision = "^0.8.2"
numpy = "^1.20.1"
tqdm = "^4.58.0"
tensorboard = "^2.4.1"
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]
ipython = "^7.21.0"
matplotlib = "^3.3.4"
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}
nose = "^1.3.7"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
